0.9.1
-----
1. Fix "TuneIn Options" when "More" selected from now-playing.
2. Allow grid in more cases - e.g. "What was that tune?"
3. Don't square off radio logos in queue and desktop bottom bar.
4. Always use recycler view for grids, and for lists where its possible to
   switch to grid. (Recycler is quicker to update when toggling).
5. Fix toggling image sizes when 1st iamge does not have size parameters (e.g.
   radio search results).
6. For mobile layout, show song details in toolbar of now-playing view if song
   info is being displayed.
7. For mobile layout, only toggle play/pause and info button if screen width is
   less than 600px.
8. No need for lazy-load of images with recycler.

0.9.0
-----
 1. Fix missing repeat-single icon in desktop queue view.
 2. Display "current / total" in now-playing.
 3. Add mini-player.
 4. Only show technical info in desktop bottom bar if not showing ratings, or
    screen width is 900px or higher.
 5. Reduce CPU load when the server connection is lost, or there are no players,
    by using icons and not a circular spinning progressbars.
 6. When getting track info for a queue item, pass its position in the queue to
    the trackinfo command and not its ID/URL. This helps with TuneIn stations,
    where the URL in the queue can change.
 7. Don't repeatedly poll player status if song duration is 0 (as is for
    streams).
 8. When parsing SlimBrowse response, if we have a mixture of items with and
    without images then only set image to default album or artist image for
    items with the corresponding type. Also, if find an item that is not an
    artist or album, then disable grid.
 9. Remove "noselect" from browse-list, to allow text items (e.b. bandcamp URLs)
    to be selected.
10. Update axios, vuetify, and vuex libraries.
11. Add action to move queue from one player to another.
12. When creating a group player, also update server status 1 second later.

0.8.4
-----