@@ -38,7 +38,6 @@
     <lms-now-playing v-bind:class="{'inactive-page': page!='now-playing'}"></lms-now-playing>
     <lms-queue v-bind:class="{'inactive-page': page!='queue'}"></lms-queue>
     <lms-bottomnav></lms-bottomnav>
-    <lms-noplayer></lms-noplayer>
     <lms-noconnection></lms-noconnection>
     <lms-ui-settings v-if="dialogs.uisettings"></lms-ui-settings>
     <lms-player-settings v-if="dialogs.playersettings"></lms-player-settings>
