@@ -5,13 +5,15 @@
 3. Don't square off radio logos in queue and desktop bottom bar.
 4. Always use recycler view for grids, and for lists where its possible to
    switch to grid. (Recycler is quicker to update when toggling).
-5. Fix toggling image sizes when 1st iamge does not have size parameters (e.g.
+5. Fix toggling image sizes when 1st image does not have size parameters (e.g.
    radio search results).
 6. For mobile layout, show song details in toolbar of now-playing view if song
    info is being displayed.
 7. For mobile layout, only toggle play/pause and info button if screen width is
    less than 600px.
 8. No need for lazy-load of images with recycler.
+9. Add a "now-playing" view. This is the same a the expanded desktop view, but
+   designed to show only now playing info.
 
 0.9.0
 -----
